--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 <script>
-const words = ["Web Developer", "Newbie Developer", "Designer", "HCMUTE Student"];
+const words = ["Web Developer", "New Software Developer", "HCMUTE Student"];
 let i = 0, j = 0, currentWord = "", isDeleting = false;
 const el = document.querySelector(".typing");
 
