--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
    <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/ItsCrizp"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/kaindevvn"><i class="fa-brands fa-github"></i></a>
                 <a href="https://discord.gg/5f546pVq7q"><i class="fa-brands fa-discord"></i></a>
                 <a href="https://www.instagram.com/081_kainn?igsh=MW5ra3hmeTRneWpmbQ%3D%3D&utm_source=qr"><i class="fa-brands fa-instagram"></i></a>
             </div>
