--- a/skill.html
+++ b/skill.html
@@ -4,22 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="skill.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" sizes="16x16" href="favicon-16x16.png">
+
 
 </head> 
 
+
 <body>
     <header>
-        <a class="Logo"> (name) </a>"
+        <a class="logo"> Kain </a>
 
-                <nav>
-                <a href="index.html" class="Active">Home</a>
-                <a href="skill.html">Skills</a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="skill.html" class="active">Skills</a>
                 <a href="exp.html">Experience</a>
                 <a href="edu.html">Education</a>
                 <a href="Contact.html">Contact</a>
                 <a href="wip.html">WIP</a>
-                </nav>
+            </nav>
     </header>    
-
     
+    <section class="skill" id="skill">
+        <h2> My Skills </h2>
+
+        <div class="box-container">
+
+            <div class="box">
+                <i class="skill"></i>
+                <h3> Teamwork </h3>
+                <p> Ability to collaborate effectively with others to achieve shared goals. </p>
+                <br>
+                <p> Co-work in many group projects and achive high position in many internal competition.</p>
+            </div>
+ 
+            <div class="box">
+                <i class="skill"></i>
+                <h3> Critical Thinking</h3>
+                <p> Going through each education after 12+ years, I have developed myself one of the most valuable skills </p>
+                <br>
+                <p> I just realized it not so long ago, I could find a solution quickly and way to solve it effectively </p>
+            </div>
+
+            <div class="box">
+                <i class="skill"></i>
+                <h3> English </h3>
+                <p> I have achived 6.5 IELTS Certificate in Summer 2024 with the highest rated skill being "Listening" </p>
+                <br
+                <p> However, i believe i unlocked further potential throughout my education</p>
+            </div>
+
+            <div class="box">
+                <i class="fa-brands fa-html5"></i>
+                <h3> HTML </h3>
+                <p> Currently, I am a new web developer, most skill in this field isn't honed as much as other </p>
+                <br>
+                <p> Willing to learn more and explore more to improve my overall skill in this language particularly</p>
+            </div>
+
+            <div class="box">
+                <i class="fa-brands fa-css3"></i>
+                <h3> CSS </h3>
+                <p> As much as HTML, however, I believe that I dive into this language more than HTML </p>
+                <br>
+                <p> Figuring out ways to enhance and beautify the website on my own really excite me.</p>
+            </div>
+
+            <div class="box">
+                <i class="fa-brands fa-python"></i>
+                <h3> Python </h3>
+                <p> Experienced in writing clean and efficient code for various applications using Python. </p>
+                <br>
+                <p> (Making progress through Computer Programming Class)</p>
+            </div>
+
+
+        </div>
+
+
